<?xml version="1.0" encoding="utf-8"?>
<resources>

   <string name="app_name">CySquare</string>
   <string name="action_settings">Settings</string>
   <string name="hello_world">Login Screen</string>
   <string name="username">Username:</string>
   <string name="password">Password:</string>
   <string name="Login">Login</string>
   
   
   <string name="student_welcome">Welcome!</string>
   <string name="check_in">Check In</string>
   <string name="view_my_classes">View My Classes</string>
   <string name="my_friends">My Friends</string>
   <string name="view_my_profile">View My Profile</string>

</resources>
