<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentWelcome" >    
    	 	    
<Button
    android:id="@+id/check_in_button"
    android:layout_width="140dp"
    android:layout_height="80dp"
    android:layout_above="@+id/my_friends_button"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="31dp"
    android:text="@string/check_in" />

<Button
    android:id="@+id/my_friends_button"
    style="?android:attr/buttonStyleSmall"
    android:layout_width="140dp"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:text="@string/my_friends" />

<Button
    android:id="@+id/view_my_profile_button"
    style="?android:attr/buttonStyleSmall"
    android:layout_width="140dp"
    android:layout_height="wrap_content"
    android:layout_below="@+id/my_friends_button"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="15dp"
    android:text="@string/view_my_profile" />

<Button
    android:id="@+id/view_my_classes_button"
    style="?android:attr/buttonStyleSmall"
    android:layout_width="140dp"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="77dp"
    android:text="@string/view_my_classes" />

<TextView
    android:id="@+id/student_welcome"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/check_in_button"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="30dp"
    android:text="@string/student_welcome"
    android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>