<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:paddingBottom="@dimen/activity_vertical_margin"
   android:paddingLeft="@dimen/activity_horizontal_margin"
   android:paddingRight="@dimen/activity_horizontal_margin"
   android:paddingTop="@dimen/activity_vertical_margin"
   tools:context=".MainActivity" >

   <TextView
      android:id="@+id/login_screen"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="18dp"
      android:text="@string/hello_world"
      android:textAppearance="?android:attr/textAppearanceLarge" />

   <EditText
      android:id="@+id/username_input_field"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/username"
      android:layout_marginLeft="32dp"
      android:layout_toRightOf="@+id/username"
      android:ems="10" 
      android:inputType="text">

      <requestFocus />
   </EditText>

   <EditText
      android:id="@+id/password_input_field"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/password"
      android:layout_alignLeft="@+id/username_input_field"
      android:ems="10"
      android:inputType="textPassword" />

   <Button
      android:id="@+id/log_in_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/password_input_field"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="94dp"
      android:onClick="login"
      android:text="@string/Login" />

   <TextView
       android:id="@+id/username"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentLeft="true"
       android:layout_below="@+id/login_screen"
       android:layout_marginTop="105dp"
       android:text="@string/username"
       android:textAppearance="?android:attr/textAppearanceMedium" />

   <TextView
       android:id="@+id/password"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/username"
       android:layout_centerVertical="true"
       android:text="@string/password"
       android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>